at-home-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "at-home-server-service"
  namespace: "at-home-server"
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app: "at-home-server"
