at-home-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "at-home-server-ingress"
  namespace: "at-home-server"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: "at-home-server-ingress"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "at-home-server-service"
              servicePort: 80
